--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,3 +1,7 @@
+
+
+#Vanta Black by rishav12s
+
 foreground              #FFFFFF
 background              #000000
 selection_foreground    #000000
@@ -29,7 +33,7 @@ mark3_foreground        #000000
 mark3_background        #FFFFFF
 
 color0  #000000
-color8  #333333
+color8  #454545
 
 color1  #f2a7a7
 color9  #ffc4c4
