--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,14 +5,27 @@ set -g prefix C-s
 
 setw -g mode-keys vi
 bind-key h select-pane -L
-bind-key j select-pane -D 
-bind-key k select-pane -U 
+bind-key j select-pane -D
+bind-key k select-pane -U
 bind-key l select-pane -R
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
-
+# set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @kanagawa-theme 'wave'
+set -g @kanagawa-show-powerline false
+set -g @kanagawa-battery-label false
+set -g @kanagawa-show-battery-status true
+set -g @kanagawa-show-network false
+set -g @kanagawa-show-weather false
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-show-flags true
+set -g @kanagawa-show-left-icon session
 set -g status-position top
 
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
+
+set -g pane-border-style fg=default,bg=default
+set -g pane-active-border-style fg=default,bg=default
+
+set -g status off
