--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,3 @@
-include hyde.conf
-allow_remote_control yes
-# Add your custom configurations here
 background_opacity 0.8
+active_border_color white
+inactive_border_color white
