--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,57 +1,50 @@
 
-
-#Vanta Black by rishav12s
-
 foreground              #FFFFFF
 background              #000000
 selection_foreground    #000000
 selection_background    #FFFFFF
 
-cursor                  #00fff9
+cursor                  #00fff9 
 cursor_text_color       #000000
 
-url_color               #FFFFFF
+url_color               #00ffff
 
-active_border_color     #FFFFFF
-inactive_border_color   #333333
-bell_border_color       #FFFFFF
+active_border_color     #ff00ff
+inactive_border_color   #555555
+bell_border_color       #ffff00
 
 wayland_titlebar_color  system
 macos_titlebar_color    system
 
-active_tab_foreground   #FFFFFF
-active_tab_background   #000000
+active_tab_foreground   #000000
+active_tab_background   #00ffff
 inactive_tab_foreground #FFFFFF
 inactive_tab_background #000000
-tab_bar_background      #FFFFFF
+tab_bar_background      #000000
 
 mark1_foreground        #000000
-mark1_background        #FFFFFF
+mark1_background        #ffff00
 mark2_foreground        #000000
-mark2_background        #FFFFFF
-mark3_foreground        #000000
-mark3_background        #FFFFFF
+mark2_background        #ff00ff
+mark3_foreground        #FFFFFF
+mark3_background        #9d00ff
 
+# Normal Colors
 color0  #000000
-color8  #454545
+color1  #ff007f
+color2  #33ff00
+color3  #ffff00
+color4  #0099ff
+color5  #9d00ff
+color6  #00ffff
+color7  #FFFFFF
 
-color1  #f2a7a7
-color9  #ffc4c4
-
-color2  #cdd394
-color10 #eff6ab
-
-color3  #f0e1c5
-color11 #ffe6b5
-
-color4  #95b2c9
-color12 #c9e6fd
-
-color5  #e5d2e9
-color13 #f7d7ff
-
-color6  #abebe2
-color14 #ddfcf8
-
-color7  #eeeeee
-color15 #d4d4d4
+# Bright Colors
+color8  #555555
+color9  #ff5599
+color10 #99ff77
+color11 #ffff66
+color12 #55b3ff
+color13 #c066ff
+color14 #66ffff
+color15 #FFFFFF
