--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,45 +1,45 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "/home/isaiah/.config/logo.png",
-    "height": 10,
-    "padding": {
-      "left": 3
+    "type": "builtin",
+    "padding": { "top": 1, "left": 0, "right": 1 },
+    "color": {
+      "1": "white",
+      "2": "white",
+      "3": "white",
+      "4": "white",
+      "5": "white",
+      "6": "white",
+      "7": "white",
+      "8": "white",
+      "9": "white"
     }
   },
   "display": {
-    "separator": " - "
+    "separator": ": ",
+    "color": { "keys": "white", "title": "white" },
+    "key": { "width": 0 }
   },
   "modules": [
-    {
-      "type": "title",
-      "keyColor": "black"
-    },
-    {
-      "type": "custom",
-      "format": "- - - - - - - - -"
-    }, 
-    {
-      "type": "os",
-      "key": "OS  "
-    },
-    {
-      "type": "kernel",
-      "key": "Kernel  "
-    },
-    {
-      "type": "packages",
-      "key": "Packages"
-    }, 
-    {
-      "type": "shell",
-      "key": "Shell  "
-    },
-    {
-      "type": "wm",
-      "key": "WM  "
-    },
-    "break",
-    "colors"
+    "title",
+    "separator",
+    { "type": "os", "key": "OS" },
+    { "type": "host", "key": "Host" },
+    { "type": "kernel", "key": "Kernel" },
+    { "type": "uptime", "key": "Uptime" },
+    { "type": "packages", "key": "Packages" },
+    { "type": "shell", "key": "Shell" },
+    { "type": "display", "key": "Resolution" },
+    { "type": "de", "key": "DE" },
+    { "type": "wm", "key": "WM" },
+    { "type": "wmtheme", "key": "WM Theme" },
+    { "type": "theme", "key": "Theme" },
+    { "type": "icons", "key": "Icons" },
+    { "type": "terminal", "key": "Terminal" },
+    { "type": "terminalfont", "key": "Terminal Font" },
+    { "type": "cpu", "key": "CPU" },
+    { "type": "gpu", "key": "GPU" },
+    { "type": "memory", "key": "Memory", "format": "{used} / {total}" }
   ]
 }
+
