zsh and prompt improvements

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,8 @@
-background_opacity 0.8
+include hyde.conf
+allow_remote_control yes
+
+# Add your custom configurations here
+background_opacity 0.50
 active_border_color white
 inactive_border_color white
+
