--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -4,7 +4,7 @@ background              #000000
 selection_foreground    #000000
 selection_background    #FFFFFF
 
-cursor                  #00fff9 
+cursor                  #FFFFFF 
 cursor_text_color       #000000
 
 url_color               #00ffff
